# MealFinder

./: .gitignore  README.md
MealFinderMLServer/MFMLServer/: pyproject.toml
MealFinderMLServer/MFMLServer/mfmlserver/: agent.py  agent_test.py  entry.py  server_conf.py
MealFinderServer/: Package.resolved  Package.swift  README.md  docker-compose.yml
MealFinderServer/Sources/App/: configure.swift  entrypoint.swift  routes.swift
MealFinderServer/Sources/App/AWSService/: AWSExtension.swift
MealFinderServer/Sources/App/AppConfig/: AppConfig.swift
MealFinderServer/Sources/App/Authentication/: TokenAuth.swift  UserAuth.swift
MealFinderServer/Sources/App/Controllers/: CommentController.swift  PostController.swift  RecipeController.swift  UserController.swift
mealFinder/: .gitignore
mealFinder/mealFinder/: ContentView.swift  Info.plist  Item.swift  mealFinderApp.swift
mealFinder/mealFinder.xcodeproj/: project.pbxproj
mealFinder/mealFinder/Model/: Comment.swift  IngredientData.swift  Post.swift  Recipe.swift  RecipeData.swift
mealFinder/mealFinder/Services/: RecipeService.swift
mealFinder/mealFinder/Views/: CommentView.swift  ContentView.swift  DetailView.swift  FindView.swift  ForumView.swift  ImagePicker.swift  LibView.swift  LoginView.swift  LogoutView.swift  PostDetailView.swift  RecipeDetailView.swift  RecipePopUpView.swift  RegisterView.swift  SharePostView.swift
mealFinder/mealFinder/utils/: AIService.swift  CommentService.swift  HideTabView.swift  Post.swift  PostService.swift  RecipeService.swift  SendPost.swift  UserService.swift
(+28 files in other folders)
