[tool.poetry]
name = "mfmlserver"
version = "0.1.0"
description = ""
authors = ["Yuchen Jiang <yj210@duke.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
celery = "^5.4.0"
rabbitmq = "^0.2.0"
python-dotenv = "^1.0.1"
boto3 = "^1.35.57"
pika = "^1.3.2"
redis = "^5.2.0"
openai = "^1.54.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
